--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,10 @@ a {
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    padding: 10px;
+    padding: 12px;
     background-color: #6986ac;
     max-width: 55em;
-    margin: 1.5em auto; /* Ceneters navbar elements */ 
+    margin: 2.5em auto; /* Ceneters navbar elements */ 
     border-radius: 1em;
 
     position: fixed; /* Set the navbar to fixed position */
@@ -37,15 +37,15 @@ a {
     width: 100%;
 }
 
-.square {
+.nav-blur {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    height: 6.5em;
-    background: linear-gradient(rgba(244, 244, 244, 0.9), rgba(244, 244, 244, 0.4));
-    backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px);
+    height: 8em;
+    background: linear-gradient(rgba(244, 244, 244, 0.9), rgba(244, 244, 244, 0.2));
+    backdrop-filter: blur(1px);
+    -webkit-backdrop-filter: blur(1px);
   }
 
 .name {
@@ -72,13 +72,13 @@ a {
 }
 
 .main_content{
-    padding-top: 8em;
+    padding-top: 10em;
 }
 
 .hamburger-menu {
     display: none;
     cursor: pointer;
-    font-size: 28pt;
+    font-size: 30pt;
 }
 
 @media (max-width: 715px) {
@@ -97,19 +97,31 @@ a {
         align-items: flex-start; /* Align items to the start */
     }
 
+    .links a{
+        padding-top: 1em;
+        margin-left: 0px;
+    }
+
     .navbar .links {
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
+        margin-left: 0px;
 
         overflow: hidden;
         max-height: 0; /* Initial state, menu is closed */
-        transition: max-height 0.5s ease-out; /* Smooth transition for max-height */
+        transition: max-height 0.35s ease-out; /* Smooth transition for max-height */
     }
 
     .navbar.active .links {
         max-height: 500px; /* Adjust this based on the total height of your links */
+    }
+
+    .navbar.active .links a {
+        padding: 15px 20px; /* Spacing inside each link */
+        margin: 5px 0; /* Space between links */
+        display: block; /* Full-width links */
     }
 }
 
