--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ a {
 }
 
 footer {
+    position: relative;
     border-top: 1px solid var(--footer-color); /* gray line */
     padding: 20px;
     text-align: center;
