Hover effects on nav links and hamburger

--- a/styles.css
+++ b/styles.css
@@ -52,16 +52,15 @@ a {
 
   .name {
     flex: 0 0 auto;
-    margin-right: auto;
     margin-left: 1em;
-    margin-right: 1em;
+    margin-right: auto 1em;
     font-size: 14pt;
     transition: transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s; /* Smooth transition for transform and font-size */
 }
 
 .name:hover {
     transform: scale(1.20) translateY(-4px) translateX(6px); /* Scale the text and move it upwards */
-    transition: transform 0.2s, background-color 0.2s, border-radius 0.2s;
+    transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
     background-color: var(--hover-color); /* Slightly brighten the background */
     border-radius: 1em;
     box-shadow: 0 0 10px var(--hover-blur); /* Blur effect */
@@ -78,9 +77,17 @@ a {
 .links a {
     text-decoration: none;
     color: var(--text-color);
-    transition: var(--text-color) 0.5s ease, color 0.5s ease;
+    transition: color 0.5s, transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
     padding: 10px 20px;
     display: inline-block;
+}
+
+.links a:hover {
+    transform: scale(1.20) translateY(-4px) translateX(2px); /* Scale the text and move it upwards */
+    transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
+    background-color: var(--hover-color); /* Slightly brighten the background */
+    border-radius: 0.2em;
+    box-shadow: 0 0 10px var(--hover-blur); /* Blur effect */
 }
 
 .main_content{
@@ -161,6 +168,21 @@ footer {
         position: relative;
         margin-left: 16px;
         margin-top: 0.5em;
+        transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
+    }
+
+    .hamburger-menu:hover {
+        display: block;
+        cursor: pointer;
+        position: relative;
+        margin-left: 16px;
+        margin-top: 0.5em;
+
+        transform: scale(1.25);
+        transition: transform 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
+        background-color: var(--hover-color); /* Slightly brighten the background */
+        border-radius: 1em;
+        box-shadow: 0 0 10px var(--hover-blur); /* Blur effect */
     }
 
     .hamburger-menu span {
