--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ a {
     line-height: 0;
     background-color: var(--nav-color);
     cursor: pointer;
+    transition: transform 0.5s
 }
 
 .bi-moon, .bi-sun {
@@ -130,9 +131,15 @@ footer {
     margin-top: 10px; /* Adjust as needed for spacing */
 }
 
+.social-links a {
+    transition: transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
+    margin: 0.5em;
+    cursor: pointer;
+}
+
 .bi-linkedin, .bi-github {
     font-size: 28px;
-    margin: 1em;
+    margin: 0.5em;
 }
 
 :root {
@@ -285,6 +292,19 @@ footer {
         border-radius: 0.2em;
         box-shadow: 0 0 10px var(--hover-blur); /* Blur effect */
         opacity: 1; /* Make the pseudo-element visible on hover */
+    }
+
+    .btn-dark-mode:hover {
+        transform: scale(1.25);
+        transition: transform 0.2s;
+    }
+    
+    .social-links a:hover {
+        transform: scale(1.25) translateY(-4px); /* Scales up the link (and thus the icon) */
+        transition: transform 0.2s;
+        border-radius: 0.5em;
+        background-color: var(--hover-color); /* Slightly brighten the background */
+        box-shadow: 0 0 10px var(--hover-blur); /* Blur effect */
     }
 }
 
