--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     text-align: center;
-    transition: background-color 0.5s ease, color 0.5s ease;
+    transition: background-color 0.5s, color 0.5s;
 }
 
 a {
@@ -20,7 +20,7 @@ a {
     box-sizing: border-box;
     padding: 12px;
     background-color: var(--nav-color);
-    transition: var(--nav-color) 0.5s ease, color 0.5s ease;
+    transition: var(--nav-color) 0.5s, color 0.5s;
     max-width: 80em;
     margin: 2.5em auto; /* Ceneters navbar elements */ 
     border-radius: 1em;
@@ -181,7 +181,6 @@ footer {
 
     .navbar{
         top: 6px; /* Fixes vertical nav shift on resize */
-        transition: all 0.2s;
     }
 
     .links {
