--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,8 @@ body {
     background-color: var(--background-color);
     color: var(--text-color);
     text-align: center;
-    transition: background-color 0.5s, color 0.5s;
+
+    transition: background-color 0.5s;
 }
 
 a {
@@ -21,10 +22,13 @@ a {
     box-sizing: border-box;
     padding: 12px;
     background-color: var(--nav-color);
-    transition: var(--nav-color) 0.5s, color 0.5s;
     max-width: 80em;
     margin: 2.5em auto; /* Ceneters navbar elements */ 
     border-radius: 1em;
+    border-color: var(--nav-color);
+    border-style: solid;
+
+    transition: background-color 0.5s;
 
     position: fixed; /* Set the navbar to fixed position */
     top: 0; 
@@ -48,8 +52,8 @@ a {
     right: 0;
     height: 8em;
     background: var(--blur-color);
-    backdrop-filter: blur(1px);
-    -webkit-backdrop-filter: blur(1px);
+    backdrop-filter: blur(1.2px);
+    -webkit-backdrop-filter: blur(1.2px);
   }
 
 /*Name Styling*/
@@ -58,7 +62,8 @@ a {
     margin-left: 1em;
     margin-right: auto 1em;
     font-size: 16pt;
-    transition: transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s; /* Smooth transition for transform and font-size */
+
+    transition: transform 0.5s, color 0.2s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s; /* Smooth transition for transform and font-size */
 }
 
 /*All Nav Links*/
@@ -68,19 +73,21 @@ a {
     gap: 40px; /* Adjusts the space between each link */
     margin: auto 1em;
     font-size: 16pt;
-    transition: all 0.2s;
+
+    transition: all 0.2s; /*Page Resize Animation Speed*/
 }
 
 /*Individual Nav Link Styling*/
 .nav-links a {
     text-decoration: none;
     color: var(--text-color);
-    transition: color 0.5s, transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
     padding: 10px 20px;
     display: inline-block;
     position: relative; /* Needed for the absolute positioning of pseudo-elements */
     border-radius: 0.2em; /* Rounded corners */
     transform-origin: center;
+
+    transition: color 0.5s, transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
 }
 
 /*adjusts hover effect size*/
@@ -94,10 +101,11 @@ a {
     border-radius: 0.4em; /* Ensure it matches the border radius of the link */
     background-color: var(--hover-color); /* Slightly brighten the background */
     opacity: 0; /* Start fully transparent */
-    transition: opacity 0.2s, box-shadow 0.2s;
     box-shadow: 0 0 8px var(--hover-blur); /* Adjusted blur effect */
     z-index: -1; /* Ensure it doesn't block interaction with the link */
     pointer-events: none;
+
+    transition: opacity 0.2s, box-shadow 0.2s;
 }
 
 /* Underline Current Page */
@@ -123,6 +131,8 @@ a {
     padding-bottom: 2em; /* Adjust as needed */
     max-width: 80em; /* Same as the navbar */
     margin: 0 auto; /* Centers the main content */
+
+    transition: color 0.5s;
 }
 
 /*Dark Mode Button*/
@@ -134,14 +144,15 @@ a {
     border-radius: 50%;
     padding: 10px;
     line-height: 0;
-    background-color: var(--nav-color);
+    background-color: var(--nav-color-hover);
     cursor: pointer;
+
     transition: transform 0.5s, bottom 0.3s;
 }
 
 /*Dark Mode Button Icons*/
 .bi-moon, .bi-sun {
-    font-size: 30px;
+    font-size: 36px;
     color: white;
 }
 
@@ -161,9 +172,10 @@ footer {
 }
 
 .social-links a {
-    transition: transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
     margin: 0.5em;
     cursor: pointer;
+    
+    transition: transform 0.5s, background-color 0.2s, box-shadow 0.2s, border-radius 0.2s;
 }
 
 /*Social Icons*/
@@ -179,8 +191,10 @@ footer {
     --text-color: black;
 
     /* Nav Styling */
-    --nav-color: #6986ac;
-    --blur-color: linear-gradient(rgba(244, 244, 244, 0.9), rgba(244, 244, 244, 0.2));
+    --nav-color: #6986ac9d;
+    --nav-color-hover:#6986ac;
+
+    --blur-color: linear-gradient(rgba(244, 244, 244, 1), rgba(244, 244, 244, 0.3));
     --hover-color: rgba(255, 255, 255, 0.23);
     --hover-blur: rgba(255, 255, 255, 0.6);
 
@@ -193,9 +207,10 @@ footer {
     --text-color: white;
 
     /* Nav Styling */
-    --nav-color: #34577e;
+    --nav-color: #34577eab;
+    --nav-color-hover:#34577e;
 
-    --blur-color: linear-gradient(rgba(29, 29, 31, 0.9), rgba(29, 29, 31, 0.2));
+    --blur-color: linear-gradient(rgba(29, 29, 31, 1), rgba(29, 29, 31, 0.3));
     --hover-color: rgba(0, 0, 0, 0.23);
     --hover-blur: rgba(0, 0, 0, 0.6);
 
@@ -224,6 +239,7 @@ footer {
     }
 
     .navbar{
+        background-color: var(--nav-color-hover);
         top: -12px; /* Higher touch target for mobile */
         transition: top 0.2s;
     }
@@ -260,8 +276,8 @@ footer {
     }
 
     .name{  
-        margin-left: 2em;
-        font-size: 20px;
+        margin-left: 1.5em;
+        font-size: 24px;
     }
 
     .navbar{
@@ -299,7 +315,7 @@ footer {
 
         overflow: hidden;
         max-height: 0; /* Initial state, menu is closed */
-        transition: max-height 0.35s ease-out; /* Smooth transition for max-height */
+        transition: max-height 0.25s ease; /* Smooth transition for max-height */
     }
 
     .navbar.active .nav-links {
@@ -315,6 +331,12 @@ footer {
 
 /*Hover effects for cursor devices only*/
 @media (hover: hover) {
+    
+    .navbar:hover{
+        background-color: var(--nav-color-hover);
+        transition: background-color 0.2s ease;
+    }
+
     .hamburger-menu:hover {
         display: block;
         cursor: pointer;
